# suboxui

./: CMakeLists.txt  README.md
.github/workflows/: Build.yml  Build64.yml
include/: common.h  config.h  crypto.h  driver_singbox.h  gui.h  gui_utils.h  proxy.h  proxy_internal.h  proxy_types.h  resource.h  utils.h
resources/: resource.rc  resource.res
src/: config_nodes.c  config_nodes_crud.c  config_nodes_internal.h  config_nodes_manage.c  config_parsers.c  config_settings.c  config_sub.c  crypto_bio.c  crypto_core.c  crypto_tls.c  crypto_ws.c  driver_singbox.c  globals.c  gui_log.c  gui_node_edit.c  gui_node_mgr.c  gui_node_mgr_nodes.c  gui_node_mgr_private.h  gui_node_mgr_routes.c  gui_node_mgr_subs.c  gui_settings.c  gui_utils.c  main.c  proxy.c  proxy_h2.c  proxy_loop.c  proxy_step_inbound.c  proxy_step_outbound.c  proxy_step_session.c  proxy_step_tunnel.c  proxy_utils.c  utils_base.c  utils_net.c  utils_node.c  utils_sys.c
